testsuite/tests/properties/invalid_new_node/not_node_entity.lkt
import common

@synthetic class LiteralList: ASTList[Literal] {
    fun prop(): Int = {
        val e = Entity[Int](0, null[EntityInfo]);
        e.node
    }
}
